Product recommendation problem

--- a/week-3-pandas/amazon_recommendation_problem.ipynb
+++ b/week-3-pandas/amazon_recommendation_problem.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "amazon_solution.ipynb",
+      "name": "amazon_recommendation_problem.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -34,7 +34,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/vvthakral/data-science-bootcamp/blob/main/amazon_recommendation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/vvthakral/data-science-bootcamp/blob/main/week-3-pandas/amazon_recommendation_problem.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -51,7 +51,7 @@
         "Learnings:<br>\n",
         "How to handle huge dataset<br>\n",
         "How to deal with Textual data<br>\n",
-        "How to build prototype recommender systembr> <br>\n",
+        "How to build prototype recommender system <br>\n",
         "How to make recommendations more efficient<br>"
       ]
     },
@@ -319,21 +319,21 @@
         "id": "_C8spn6kmRvl"
       },
       "source": [
-        "#Task 1\r\n",
-        "#Merge orders with same orders\r\n",
-        "'''\r\n",
-        "After merger, products in same order id should be merged into 1 string\r\n",
-        "eg: Google Phone, Wired Headphones\r\n",
-        "'''\r\n",
-        "\r\n",
-        "#Task 2\r\n",
-        "#Make recommendation\r\n",
-        "'''\r\n",
-        "Make simple recommendation, just based on count of combinations from previous purchase history.\r\n",
-        "eg: \r\n",
-        "google phone, wired headphones 5 times\r\n",
-        "google phone, usb type c 10 times\r\n",
-        "so recommend usb type c cable if customer has google phone in their cart\r\n",
+        "#Task 1\n",
+        "#Merge orders with same order ids\n",
+        "'''\n",
+        "After merger, products in same order id should be merged into 1 string\n",
+        "eg: Google Phone, Wired Headphones\n",
+        "'''\n",
+        "\n",
+        "#Task 2\n",
+        "#Make recommendation\n",
+        "'''\n",
+        "Make simple recommendation, just based on count of combinations from previous purchase history.\n",
+        "eg: \n",
+        "google phone, wired headphones 5 times\n",
+        "google phone, usb type c 10 times\n",
+        "so recommend usb type c cable if customer has google phone in their cart\n",
         "'''"
       ],
       "execution_count": null,
@@ -345,13 +345,13 @@
         "id": "VpRndCLMnUIY"
       },
       "source": [
-        "def make_recommendation(product):\r\n",
-        "  print(product)\r\n",
-        "  #Write code for recommendation\r\n",
-        "  return recommendation\r\n",
-        "\r\n",
-        "\r\n",
-        "product = 'google phone'\r\n",
+        "def make_recommendation(product):\n",
+        "  print(product)\n",
+        "  #Write code for recommendation\n",
+        "  return recommendation\n",
+        "\n",
+        "\n",
+        "product = 'google phone'\n",
         "print(make_recommendation(product))"
       ],
       "execution_count": null,
